# webapptemplate

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: publish.yml
apps/accounts/: adapters.py  admin.py  api.py  apps.py  forms.py  middleware.py  models.py  schemas.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_initial.py
apps/accounts/templates/account/: login.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html  verification_sent.html
apps/accounts/templates/accounts/: profile_settings.html
apps/accounts/tests/: test_forms.py  test_middleware.py  test_templates.py  test_views.py
apps/api/tests/: test_endpoints.py
apps/api/v1/: auth.py  router.py  schemas.py  workspaces.py
apps/dashboard/: apps.py  urls.py  views.py
apps/dashboard/templates/dashboard/: dashboard.html
apps/workspaces/: admin.py  api.py  api_auth.py  apps.py  context_processors.py  decorators.py  forms.py  middleware.py  models.py  schemas.py  signals.py  urls.py  views.py
apps/workspaces/migrations/: 0001_initial.py  0002_invitation_expires_at.py  0003_alter_invitation_expires_at.py  0004_apikey.py
apps/workspaces/templates/workspaces/: create.html  settings.html
apps/workspaces/templatetags/: workspace_tags.py
apps/workspaces/tests/: test_models.py  test_views.py
config/: urls.py
config/settings/: base.py  development.py  production.py
installer/: CHANGELOG.md  README.md  pyproject.toml
installer/webapptemplate_installer/: cli.py  scaffold.py
installer/webapptemplate_installer/templates/: __init__.py
templates/: base.html  landing.html
templates/account/: email_confirm.html  email_verification_pending.html  logout.html
templates/components/: app_logo.html  language_switcher.html  messages.html  nav_item.html  sidebar.html  workspace_switcher.html
templates/layouts/: app.html  auth.html
templates/socialaccount/: login_redirect.html
templates/workspaces/: list.html  settings.html
templates/workspaces/partials/: api_keys_list.html  create_form.html  members_list.html  pending_invitations.html
webapptemplate/: app_config.py  context_processors.py  default_settings.py  registry.py  settings_panels.py  urls.py
webapptemplate/installer/: cli.py  scaffold.py  templates.py
