[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webapptemplate-installer"
version = "0.2.0"
description = "CLI installer for scaffolding new webapptemplate Django projects"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "webapptemplate>=0.2.0",
]

[project.scripts]
webapptemplate = "webapptemplate_installer.cli:main"

[project.urls]
Homepage = "https://github.com/your-org/webapptemplate"

[tool.hatch.build.targets.wheel]
packages = ["webapptemplate_installer"]

[tool.hatch.build]
include = [
    "webapptemplate_installer/**",
]
